# TheExperiment

./: .gitignore  .travis.yml  .vim  LICENSE  README.md  README.txt  TheExperiment.cabal  parser_test.hs  quick_run_tests.sh  run_specs.sh  run_tests.sh  test_arbitrary.hs  test_pp.hs
nuParser/: TheExperiment.cabal  test_parser.sh
nuParser/src/Language/TheExperiment/: Parser.hs
nuParser/src/Language/TheExperiment/Parser/: Definition.hs  Expression.hs  Lexer.hs  Literal.hs  Statement.hs  Type.hs
nuParser/test/: test_parser.hs
nuParser/tests/: test_parser.hs
spec/: RunTests.hs
spec/Language/TheExperiment/: CodeGenSpec.hs  LexerSpec.hs
src/: test.e
src/Control/Monad/: ContextT.hs  ErrorM.hs  GraphT.hs  MemoT.hs
src/Language/: TheExperiment.hs
src/Language/TheExperiment/: AST.hs  Builtin.hs  CodeGen.hs  CodeGenType.hs  Compile.hs  Error.hs  Inferer.hs  Inferrer.hs  Lexer.hs  Misc.hs  Parser.hs  PrettyPrint.hs  TempLexer.hs  TempParser.hs  Type.hs
src/Language/TheExperiment/AST/: Expression.hs  Module.hs  Statement.hs  Type.hs
src/Language/TheExperiment/CodeGen/: Builtin.hs  Gen.hs  Type.hs
src/Language/TheExperiment/Inferrer/: Inferrer.hs  InferrerM.hs  Pretty.hs  Scope.hs  Type.hs  Unify.hs
src/Language/TheExperiment/Parser/: AST.hs  Expression.hs  Lexer.hs  Literal.hs  Literals.hs  Module.hs  Statement.hs  Type.hs  Types.hs
src/Language/TheExperiment/Parser/AST/: Expression.hs  Module.hs  Statement.hs  Type.hs
src/Language/TheExperiment/Pretty/: Expression.hs  Literal.hs  Statement.hs  Type.hs
test/: test_runner.hs
test/ETests/: Parser.hs  Test.hs  Utils.hs
test/ETests/CodeGen/: Gen.hs
test/ETests/Parser/: Expression.hs  Literal.hs  Statement.hs  Statements.hs  Type.hs
test/ETests/Pretty/: Expression.hs  Literal.hs  Statement.hs  Type.hs
