Name: TheExperiment
Synopsis: A language analogous to C with extras like type inference.
Description: A language analogous to C with extras like type inference.
Version: 0.0.1
License: BSD3
License-File: LICENSE
Author: John Van Enk <vanenkj@gmail.com> and Job Vranish <job.vranish@gmail.com>
Maintainer: Job Vranish
Stability: experimental
Category: Language
Cabal-Version: >= 1.9.2
Build-Type: Simple

source-repository head
  type: git
  location: git@gitorious.atomicobject.com:theexperiment/theexperiment.git

Library
    Extensions: DeriveDataTypeable,
                DeriveFunctor,
                DeriveFoldable,
                DeriveTraversable,
                GeneralizedNewtypeDeriving
    Build-Depends: base >= 4 && < 5,
                   transformers  >= 0.2.2.0 && < 0.3,
                   parsec >= 3.0.1 && < 3.2,
                   pretty >= 1.0 && < 1.1,
                   language-c >= 0.4 && < 0.5,
                   containers -any

    Exposed-Modules:
        Language.TheExperiment
        Language.TheExperiment.Parser
        Language.TheExperiment.Lexer
        Language.TheExperiment.AST
        Language.TheExperiment.CodeGen
        Language.TheExperiment.CodeGenType

    ghc-options:        -Wall
    hs-source-dirs:     src

Test-Suite runTests
    type:       exitcode-stdio-1.0
    main-is:    RunTests.hs
    build-depends: base >=4 && <=5,
                   transformers  >= 0.2.2.0 && < 0.3,
                   parsec >= 3.0.1 && < 3.2,
                   pretty >= 1.0 && < 1.1,
                   language-c >= 0.4 && < 0.5,
                   containers -any,
                   hspec >= 0.9 && < 1.0
    hs-source-dirs:     spec, src
