Name: TheExperiment
Synopsis: A language analogous to C with extras like type inference.
Description: A language analogous to C with extras like type inference.
Version: 0.0.1
License: BSD3
License-File: LICENSE
Author: John Van Enk <vanenkj@gmail.com> and Job Vranish <job.vranish@gmail.com>
Maintainer: Job Vranish
Stability: experimental
Category: Language
Cabal-Version: >= 1.9.2
Build-Type: Simple

source-repository head
  type: git
  location: git@gitorious.atomicobject.com:theexperiment/theexperiment.git

Library
    Extensions: DeriveDataTypeable,
                DeriveFunctor,
                DeriveFoldable,
                DeriveTraversable,
                GeneralizedNewtypeDeriving
    Build-Depends: base >= 4 && < 5,
                   transformers  >= 0.2.2.0 && < 0.3,
                   parsec >= 3.0.1 && < 3.2,
                   pretty >= 1.0.1.0 && < 1.2,
                   language-c >= 0.4 && < 0.5,
                   containers -any,
                   QuickCheck >= 2.4,
                   fixed-list >= 0.1.5,
                   prettyclass >= 1.0.0.0,
                   mtl >= 2.0.1.0,
                   indents >= 0.3.2

    Exposed-Modules:
        Control.Monad.ContextT
        Control.Monad.ErrorM
        Control.Monad.GraphT
        Language.TheExperiment
        Language.TheExperiment.AST
        Language.TheExperiment.AST.Expression
        Language.TheExperiment.AST.Statement
        Language.TheExperiment.AST.Type
        Language.TheExperiment.Builtin
        Language.TheExperiment.CodeGen
        Language.TheExperiment.CodeGenType
        --Language.TheExperiment.Compile
        --Language.TheExperiment.Inferrer
        Language.TheExperiment.Misc
        Language.TheExperiment.Parser
        Language.TheExperiment.Parser.Expression
        Language.TheExperiment.Parser.Lexer
        Language.TheExperiment.Parser.Statement
        Language.TheExperiment.Parser.Literal

    ghc-options:        -Wall
    hs-source-dirs:     src

Test-Suite runTests
   type:       exitcode-stdio-1.0
   main-is:    test_runner.hs
   build-depends: base >=4 && <=5,
                  transformers  >= 0.2.2.0 && < 0.3,
                  parsec >= 3.0.1 && < 3.2,
                  pretty >= 1.0 && < 1.1,
                  language-c >= 0.4 && < 0.5,
                  fixed-list >= 0.1.5,
                  indents >= 0.3.2,
                  HUnit >= 1.2 && < 1.3,
                  hspec >= 0.9 && < 1.0,
                  containers -any
   hs-source-dirs:     src, test
